--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,10 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
 
 install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install --c++11 asio autoconf doxygen ecasound fftw help2man jack libsndfile qt4; fi
-  # autotools, automake, make are present in the trusty image
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -y g++ libasio-dev libqt4-dev libqt4-opengl-dev libecasoundc-dev ecasound libxml2-dev libfftw3-dev libsndfile1-dev libjack-dev libjack0 jackd1 pkg-config libtool; fi
+  - ci/install-deps.sh
 
 before_script:
-  - ci/install-deps.sh
+  - ci/build-deps.sh
   - autoreconf -vfi
 
 script:
