ci/install-deps.sh: We actually require perl's Locale::gettext and not gettext. Test, whether cpanminus installation will 'just work'. Also adding liblo (for the future). ci/build-deps.sh: Using cpanm to install Locale::gettext. .travis.yml: Remvong unneeded PATH env. Adding clang back and cat'ing config.log output on failure in osx build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 
 compiler:
-  #  - clang
+  - clang
   - gcc
 
 matrix:
@@ -13,7 +13,6 @@ matrix:
       osx_image: xcode9.2
       env:
         - PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
-        - PATH=/usr/local/opt/gettext/bin:$PATH
           #  allow_failures:
           #    - compiler: clang
 
@@ -34,6 +33,9 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./configure --prefix='/usr'; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make dmg; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make && sudo make install; fi
+
+after_failure:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]] -a [[ -f config.log ]]; then cat config.log; fi
 
 branches:
   only:
