ci/build-deps.sh: Locale::gettext on osx, dummy. .travis.yml: Unconditionally cat config.log. This also happens on linux.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make && sudo make install; fi
 
 after_failure:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]] -a [[ -f config.log ]]; then cat config.log; fi
+  - if [[ -f config.log ]]; then cat config.log; fi
 
 branches:
   only:
