--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,17 @@ language: cpp
 git:
   depth: 3
 
+dist: trusty
+sudo: required
+osx_image: xcode9.2
+
 compiler:
   - clang
   - gcc
 
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-    - os: osx
-      osx_image: xcode9.2
+os:
+  - osx
+  - linux
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
