--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
             - g++-6
       dist: trusty
       env:
-        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
+        - CC=gcc-6 CXX=g++-6
       compiler: gcc
     # linux with gcc (current)
     - os: linux
@@ -36,7 +36,7 @@ matrix:
             - clang-3.8
       dist: trusty
       env:
-        - MATRIX_EVAL="CC=clang-3.8 CXX=clang++-3.8"
+        - CC=clang-3.8 CXX=clang++-3.8
       compiler: clang
     # osx with xcode9.2/gcc
     - os: osx
