--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
             - g++-6
       dist: trusty
       env:
-        - CC=gcc-6 CXX=g++-6
+        - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
       compiler: gcc
     # linux with gcc (current)
     - os: linux
@@ -25,6 +25,8 @@ matrix:
     # linux with clang (current)
     - os: linux
       dist: trusty
+      env:
+        - MATRIX_EVAL="COMPILE_ASIO=1"
       compiler: clang
     # linux with clang 3.8
     - os: linux
@@ -36,7 +38,7 @@ matrix:
             - clang-3.8
       dist: trusty
       env:
-        - CC=clang-3.8 CXX=clang++-3.8
+        - MATRIX_EVAL="CC=clang-3.8 CXX=clang++-3.8 COMPILE_ASIO=1"
       compiler: clang
     # osx with xcode9.2/gcc
     - os: osx
@@ -56,6 +58,7 @@ matrix:
       compiler: clang
 
 before_install:
+  - eval "${MATRIX_EVAL}"
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo rm /usr/local/include/c++; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
