.travis.yml: Adding global env for COMPILE_ASIO (and setting it to 0).

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ sudo: required
 git:
   depth: 3
 
-matrix: 
+env:
+  global:
+    - COMPILE_ASIO=0
+
+matrix:
   include:
     # linux with gcc 6
     - os: linux
