.travis.yml: Adding gcc-6 instead of g++-6 to trusty. ci/build-deps.sh: Running autoreconf to generate configure script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           install:
-            - g++-6
+            - gcc-6
       dist: trusty
       env:
         - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
