--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,18 @@ env:
 
 matrix:
   include:
+    # linux with gcc 7
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          install:
+            - gcc-7
+      dist: trusty
+      env:
+        - MATRIX_EVAL="CC=gcc-7 CXX=g++-7"
+      compiler: gcc
     # linux with gcc 6
     - os: linux
       addons:
