--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,11 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-6 CXX=g++-6"
       compiler: gcc
-    # linux with gcc (current)
+    # linux with gcc (default)
     - os: linux
       dist: trusty
       compiler: gcc
-    # linux with clang (current)
+    # linux with clang (default)
     - os: linux
       dist: trusty
       env:
@@ -64,13 +64,11 @@ matrix:
     - os: osx
       osx_image: xcode9.2
       compiler: clang
-    # osx with xcode8/gcc
+    # osx with xcode/gcc (default)
     - os: osx
-      osx_image: xcode8
       compiler: gcc
-    # osx with xcode8/clang
+    # osx with xcode/clang (default)
     - os: osx
-      osx_image: xcode8
       compiler: clang
 
 before_install:
