fix export PKG_CONFIG_PATH

--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ install:
 
 before_script:
   - ci/build-deps.sh
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export export PKG_CONFIG_PATH=/usr/local/opt/openssl/lib/pkgconfig:/usr/local/opt/qt/lib/pkgconfig:/usr/local/lib/pkgconfig; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PKG_CONFIG_PATH=/usr/local/opt/openssl/lib/pkgconfig:/usr/local/opt/qt/lib/pkgconfig:/usr/local/lib/pkgconfig; fi
   - autoreconf -vfi
 
 script:
