--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -21,7 +21,7 @@ RENDERER_TEXT = "manual page for the \
 # Note the order of SUBDIRS in the top-level Makefile.
 #
 # "make" must be called before "make dist", there is no automatic dependency!
-HELP2MAN_LOCALE ?= $(shell locale -a | egrep "C.UTF-8" || echo "C")
+HELP2MAN_LOCALE ?= C.UTF-8
 
 $(dist_man_MANS): $(top_srcdir)/src/configuration.cpp $(top_srcdir)/configure.ac 
 	help2man \
