Fix linking of frameworks in macOS bundle

--- a/data/MacOSX/Makefile.am
+++ b/data/MacOSX/Makefile.am
@@ -66,11 +66,21 @@ install-data-hook:
 	; done
 
 	for exec in $(SSR_executables); do \
-		install_name_tool -change /usr/local/opt/qt5/lib/QtCore.framework/Versions/5/QtCore @executable_path/../Frameworks/QtCore.framework/Versions/5/QtCore $(prefix)/MacOS/$$exec \
-		; install_name_tool -change /usr/local/opt/qt5/lib/QtGui.framework/Versions/5/QtGui @executable_path/../Frameworks/QtGui.framework/Versions/5/QtGui $(prefix)/MacOS/$$exec \
-		; install_name_tool -change /usr/local/opt/qt5/lib/QtOpenGL.framework/Versions/5/QtOpenGL @executable_path/../Frameworks/QtOpenGL.framework/Versions/5/QtOpenGL $(prefix)/MacOS/$$exec \
-		; install_name_tool -change /usr/local/opt/qt5/lib/QtWidgets.framework/Versions/5/QtWidgets @executable_path/../Frameworks/QtWidgets.framework/Versions/5/QtWidgets $(prefix)/MacOS/$$exec \
-		; install_name_tool -change /usr/local/opt/qt5/lib/QtPrintSupport.framework/Versions/5/QtPrintSupport @executable_path/../Frameworks/QtPrintSupport.framework/Versions/5/QtPrintSupport $(prefix)/MacOS/$$exec \
+		install_name_tool -change /usr/local/opt/qt/lib/QtCore.framework/Versions/5/QtCore @executable_path/../Frameworks/QtCore.framework/Versions/5/QtCore $(prefix)/MacOS/$$exec \
+		; install_name_tool -change /usr/local/opt/qt/lib/QtGui.framework/Versions/5/QtGui @executable_path/../Frameworks/QtGui.framework/Versions/5/QtGui $(prefix)/MacOS/$$exec \
+		; install_name_tool -change /usr/local/opt/qt/lib/QtOpenGL.framework/Versions/5/QtOpenGL @executable_path/../Frameworks/QtOpenGL.framework/Versions/5/QtOpenGL $(prefix)/MacOS/$$exec \
+		; install_name_tool -change /usr/local/opt/qt/lib/QtWidgets.framework/Versions/5/QtWidgets @executable_path/../Frameworks/QtWidgets.framework/Versions/5/QtWidgets $(prefix)/MacOS/$$exec \
+		; install_name_tool -change /usr/local/opt/qt/lib/QtPrintSupport.framework/Versions/5/QtPrintSupport @executable_path/../Frameworks/QtPrintSupport.framework/Versions/5/QtPrintSupport $(prefix)/MacOS/$$exec \
+	; done
+
+# fix linking of libraries
+	install_name_tool -change /usr/local/lib/libogg.0.dylib  @executable_path/../Libraries/libogg.0.dylib  $(prefix)/Libraries/libvorbis.0.dylib
+	install_name_tool -change /usr/local/Cellar/libvorbis/1.3.5/lib/libvorbis.0.dylib  @executable_path/../Libraries/libvorbis.0.dylib  $(prefix)/Libraries/libvorbisenc.2.dylib
+	install_name_tool -change /usr/local/lib/libogg.0.dylib  @executable_path/../Libraries/libogg.0.dylib  $(prefix)/Libraries/libvorbisenc.2.dylib
+
+# fix linking of frameworks
+	for qtc in QtGui QtCore QtOpenGL QtWidgets QtPrintSupport; do \
+		install_name_tool -id @executable_path/../Frameworks/$$qtc.framework/Versions/5/$$qtc $(DESTDIR)$(contentsdir)/Frameworks/$$qtc.framework/Versions/5/$$qtc \
 	; done
 
 # create a DMG image
