Add code signing for macOS bundle

--- a/data/MacOSX/Makefile.am
+++ b/data/MacOSX/Makefile.am
@@ -54,7 +54,7 @@ install-data-hook:
 	install_name_tool -id @executable_path/../PlugIns/platforms/libqcocoa.dylib $(DESTDIR)$(contentsdir)/PlugIns/platforms/libqcocoa.dylib
 
 	-cd $(DESTDIR)$(dmgrootdir) && $(LN_S) /Applications
-	for qtc in QtGui QtCore QtOpenGL QtWidgets QtPrintSupport; do \
+	for qtc in QtGui QtCore QtOpenGL QtWidgets QtPrintSupport QtDBus; do \
 		install_name_tool -change $(QTLIBDIR)/$$qtc.framework/Versions/5/$$qtc @executable_path/../Frameworks/$$qtc.framework/Versions/5/$$qtc $(DESTDIR)$(contentsdir)/PlugIns/platforms/libqcocoa.dylib \
 		; mkdir -p $(prefix)/Frameworks/$$qtc.framework/Versions/5 \
 		; cp $(QTLIBDIR)/$$qtc.framework/Versions/5/$$qtc $(prefix)/Frameworks/$$qtc.framework/Versions/5/ \
@@ -83,6 +83,17 @@ install-data-hook:
 		install_name_tool -id @executable_path/../Frameworks/$$qtc.framework/Versions/5/$$qtc $(DESTDIR)$(contentsdir)/Frameworks/$$qtc.framework/Versions/5/$$qtc \
 	; done
 
+# code sign frameworks
+	for qtc in QtGui QtCore QtOpenGL QtWidgets QtPrintSupport QtDBus; do \
+		mkdir -p $(dmgrootdir)/SoundScapeRenderer-@PACKAGE_VERSION@/SoundScapeRenderer.app/Contents/Frameworks/$$qtc.framework/Resources/ \
+		; cp /usr/local/opt/qt/lib/$$qtc.framework/Resources/Info.plist $(dmgrootdir)/SoundScapeRenderer-@PACKAGE_VERSION@/SoundScapeRenderer.app/Contents/Frameworks/$$qtc.framework/Resources/ \
+		; codesign --force --deep --sign "Developer ID Application: Jens Ahrens" $(dmgrootdir)/SoundScapeRenderer-@PACKAGE_VERSION@/SoundScapeRenderer.app/Contents/Frameworks/$$qtc.framework \
+	; done
+
+# code sign app
+	codesign --force --deep --sign "Developer ID Application: Jens Ahrens" $(dmgrootdir)/SoundScapeRenderer-@PACKAGE_VERSION@/SoundScapeRenderer.app
+
+	
 # create a DMG image
 dmg:
 	@test -d "$(dmgrootdir)" || ( echo; echo; \
@@ -99,6 +110,7 @@ dmg:
 		"$(top_builddir)/SSRTemp.dmg"
 	$(RM) "$(top_builddir)/SSRTemp.dmg"
 	$(RM) -r "$(dmgrootdir)"
+	codesign --deep --force --timestamp --sign 'Developer ID Application: Jens Ahrens' $(top_builddir)/$(DMG_NAME)
 
 .PHONY: dmg
 
