Allow providing external GML and RapidJSON libs

--- a/configure.ac
+++ b/configure.ac
@@ -257,6 +257,12 @@ dnl NOTE: -pthread works on GCC, other compilers may need differnt flags!
 AS_IF([test x$GCC = xyes],
       [CXXFLAGS="$CXXFLAGS -pthread"])
 
+abs_srcdir=`(cd $srcdir && pwd)`
+
+dnl https://github.com/ilmola/gml
+CPPFLAGS="$CPPFLAGS -I$abs_srcdir/gml/include"
+AC_CHECK_HEADER([gml/vec.hpp], , [AC_MSG_ERROR([GML library cannot be found.])])
+
 ENABLE_AUTO([optimization], [code optimization],
 [
   dnl for now, we have only optimization if GCC is used
@@ -530,6 +536,8 @@ ENABLE_FORCED([websocket-interface], [WebSocket interface (needs WebSocket++ and
   CPPFLAGS="$CPPFLAGS -DASIO_STANDALONE"
   AC_CHECK_HEADER([asio.hpp], , [have_websocket_interface=no])
   AC_CHECK_HEADER([websocketpp/server.hpp], , [have_websocket_interface=no])
+  CPPFLAGS="$CPPFLAGS -I$abs_srcdir/rapidjson/include"
+  AC_CHECK_HEADER([rapidjson/document.h], , [have_websocket_interface=no])
 ])
 
 ENABLE_FORCED([ecasound], [Ecasound soundfile playback/recording],
