Add APF debugging flags to --enable-debugging

--- a/configure.ac
+++ b/configure.ac
@@ -219,6 +219,8 @@ ENABLE_EXPLICIT([debugging],[debugging symbols, asserts, ...])
 AS_IF([test x$have_debugging = xyes],
 [
   dnl DEBUGGING_FLAGS="$DEBUGGING_FLAGS -D_GLIBCXX_DEBUG"
+  DEBUGGING_FLAGS="$DEBUGGING_FLAGS -DAPF_JACK_POLICY_DEBUG"
+  DEBUGGING_FLAGS="$DEBUGGING_FLAGS -DAPF_JACKCLIENT_DEBUG"
 ],
 [
   DEBUGGING_FLAGS="$DEBUGGING_FLAGS -DNDEBUG"
