--- a/.travis.yml
+++ b/.travis.yml
@@ -1,72 +1,94 @@
 language: cpp
-sudo: required
-dist: xenial
+dist: bionic
 
 git:
   depth: 3
 
-env:
-  global:
-    - COMPILE_ASIO=0
-
 matrix:
   include:
-    # linux with gcc 8
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-8
+    - name: Linux with GCC 9
+      os: linux
+      env: CC=gcc-9 CXX=g++-9
+    - name: Linux with GCC 8
+      os: linux
       env: CC=gcc-8 CXX=g++-8
-    # linux with gcc 7
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
+    - name: Linux with GCC 7
+      os: linux
       env: CC=gcc-7 CXX=g++-7
-    # linux with clang 7
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test  # for libstdc++
-            - llvm-toolchain-xenial-7
-          packages:
-            - clang-7
-            - libstdc++-8-dev
-      env: CC=clang-7 CXX=clang++-7 COMPILE_ASIO=1
-    # linux with clang 6.0
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test  # for libstdc++
-            - llvm-toolchain-xenial-6.0
-          packages:
-            - clang-6.0
-            - libstdc++-8-dev
-      env: CC=clang-6.0 CXX=clang++-6.0 COMPILE_ASIO=1
-    # osx with xcode10.1/clang
-    - os: osx
+    - name: Linux with Clang 9
+      os: linux
+      env: CC=clang-9 CXX=clang++-9
+    - name: Linux with Clang 8
+      os: linux
+      env: CC=clang-8 CXX=clang++-8
+    - name: macOS with Xcode11/Clang
+      os: osx
+      osx_image: xcode11
+      env: BREW_WORKAROUND=yes
+    - name: macOS with Xcode10.3/Clang
+      os: osx
+      osx_image: xcode10.3
+      env: BREW_WORKAROUND=yes
+    - name: macOS with Xcode10.1/Clang
+      os: osx
       osx_image: xcode10.1
 
-before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
+addons:
+  apt:
+    #update: true
+    sources:
+      - sourceline: "ppa:ubuntu-toolchain-r/test"
+      - sourceline: "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main"
+        key_url: "https://apt.llvm.org/llvm-snapshot.gpg.key"
+      - sourceline: "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-8 main"
+        key_url: "https://apt.llvm.org/llvm-snapshot.gpg.key"
+    packages:
+      - g++-9
+      - g++-8
+      - g++-7
+      - clang-9
+      - clang-8
+      - libasio-dev
+      - qt5-default
+      - libqt5opengl5-dev
+      - libecasoundc-dev
+      #- doxygen
+      - ecasound
+      - libxml2-dev
+      - libfftw3-dev
+      - libsndfile1-dev
+      - libjack-dev
+      - libjack0
+      - help2man
+      - jackd1
+      - pkg-config
+      - libtool
+  homebrew:
+    update: true
+    packages:
+      - asio
+      - autoconf
+      #- doxygen
+      - ecasound
+      - fftw
+      - jack
+      - liblo
+      - libsndfile
+      - libxml2
+      - qt
+      # using brew, it's not possible to install needed perl dependencies for
+      # help2man (Locale::gettext), therefore best disabled for now
+      #- help2man
 
-install:
-  - ci/install-deps.sh
+before_install:
+  # https://github.com/Homebrew/brew/issues/5068#issuecomment-429984836
+  - if [ "$BREW_WORKAROUND" = yes ]; then sudo installer -pkg /Library/Developer/CommandLineTools/Packages/macOS_SDK_headers_for_macOS_10.14.pkg -target / ; fi
 
 before_script:
   - ci/build-deps.sh
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PKG_CONFIG_PATH=/usr/local/opt/openssl/lib/pkgconfig:/usr/local/opt/qt/lib/pkgconfig:/usr/local/lib/pkgconfig; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PATH="/usr/local/opt/qt/bin:$PATH"; fi
-  - autoreconf -vfi
+  - ./autogen.sh
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./configure; fi
