--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-8
-      env:
-        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+      env: CC=gcc-8 CXX=g++-8
     # linux with gcc 7
     - os: linux
       addons:
@@ -29,8 +28,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-7
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+      env: CC=gcc-7 CXX=g++-7
     # linux with clang 7
     - os: linux
       addons:
@@ -41,8 +39,7 @@ matrix:
           packages:
             - clang-7
             - libstdc++-8-dev
-      env:
-        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7 && COMPILE_ASIO=1"
+      env: CC=clang-7 CXX=clang++-7 COMPILE_ASIO=1
     # linux with clang 6.0
     - os: linux
       addons:
@@ -53,14 +50,12 @@ matrix:
           packages:
             - clang-6.0
             - libstdc++-8-dev
-      env:
-        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COMPILE_ASIO=1"
+      env: CC=clang-6.0 CXX=clang++-6.0 COMPILE_ASIO=1
     # osx with xcode10.1/clang
     - os: osx
       osx_image: xcode10.1
 
 before_install:
-  - eval "${MATRIX_EVAL}"
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
 
