--- a/.travis.yml
+++ b/.travis.yml
@@ -4,50 +4,10 @@ dist: bionic
 git:
   depth: 3
 
-matrix:
-  include:
-    - name: Linux with GCC 9
-      os: linux
-      env: CC=gcc-9 CXX=g++-9
-    - name: Linux with GCC 8
-      os: linux
-      env: CC=gcc-8 CXX=g++-8
-    - name: Linux with GCC 7
-      os: linux
-      env: CC=gcc-7 CXX=g++-7
-    - name: Linux with Clang 9
-      os: linux
-      env: CC=clang-9 CXX=clang++-9
-    - name: Linux with Clang 8
-      os: linux
-      env: CC=clang-8 CXX=clang++-8
-    - name: macOS with Xcode11/Clang
-      os: osx
-      osx_image: xcode11
-      env: BREW_WORKAROUND=yes
-    - name: macOS with Xcode10.3/Clang
-      os: osx
-      osx_image: xcode10.3
-      env: BREW_WORKAROUND=yes
-    - name: macOS with Xcode10.1/Clang
-      os: osx
-      osx_image: xcode10.1
-
 addons:
   apt:
     #update: true
-    sources:
-      - sourceline: "ppa:ubuntu-toolchain-r/test"
-      - sourceline: "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main"
-        key_url: "https://apt.llvm.org/llvm-snapshot.gpg.key"
-      - sourceline: "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-8 main"
-        key_url: "https://apt.llvm.org/llvm-snapshot.gpg.key"
-    packages:
-      - g++-9
-      - g++-8
-      - g++-7
-      - clang-9
-      - clang-8
+    packages: &default-packages
       - libasio-dev
       - libwebsocketpp-dev
       - qt5-default
@@ -80,6 +40,68 @@ addons:
       # using brew, it's not possible to install needed perl dependencies for
       # help2man (Locale::gettext), therefore best disabled for now
       #- help2man
+
+matrix:
+  include:
+    - name: Linux with GCC 9
+      os: linux
+      env: CC=gcc-9 CXX=g++-9
+      addons:
+        apt:
+          sources:
+            - sourceline: "ppa:ubuntu-toolchain-r/test"
+          packages:
+            - g++-9
+            - *default-packages
+    - name: Linux with GCC 8
+      os: linux
+      env: CC=gcc-8 CXX=g++-8
+      addons:
+        apt:
+          packages:
+            - g++-8
+            - *default-packages
+    - name: Linux with GCC 7
+      os: linux
+      env: CC=gcc-7 CXX=g++-7
+      addons:
+        apt:
+          packages:
+            - g++-7
+            - *default-packages
+    - name: Linux with Clang 9
+      os: linux
+      env: CC=clang-9 CXX=clang++-9
+      addons:
+        apt:
+          sources:
+            - sourceline: "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main"
+              key_url: "https://apt.llvm.org/llvm-snapshot.gpg.key"
+          packages:
+            - clang-9
+            - *default-packages
+    - name: Linux with Clang 8
+      os: linux
+      env: CC=clang-8 CXX=clang++-8
+      addons:
+        apt:
+          sources:
+            - sourceline: "deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-8 main"
+              key_url: "https://apt.llvm.org/llvm-snapshot.gpg.key"
+          packages:
+            - clang-8
+            - *default-packages
+    - name: macOS with Xcode11/Clang
+      os: osx
+      osx_image: xcode11
+      env: BREW_WORKAROUND=yes
+    - name: macOS with Xcode10.3/Clang
+      os: osx
+      osx_image: xcode10.3
+      env: BREW_WORKAROUND=yes
+    - name: macOS with Xcode10.1/Clang
+      os: osx
+      osx_image: xcode10.1
 
 before_install:
   # https://github.com/Homebrew/brew/issues/5068#issuecomment-429984836
