--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ addons:
       - libsndfile
       - libxml2
       - qt
+      - vrpn
       # libmysofa needs this:
       - cunit
       # using brew, it's not possible to install needed perl dependencies for
@@ -112,19 +113,16 @@ matrix:
 
 before_script:
   - ci/build-deps.sh
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PKG_CONFIG_PATH=/usr/local/opt/openssl/lib/pkgconfig:/usr/local/opt/qt/lib/pkgconfig:/usr/local/lib/pkgconfig; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PATH="/usr/local/opt/qt/bin:$PATH"; fi
+  - if [ "$TRAVIS_OS_NAME" = osx ]; then brew link qt --force; fi
   - ./autogen.sh
+  - ./configure --enable-gui --enable-ip-interface --enable-websocket-interface --enable-ecasound --enable-sofa --enable-polhemus --enable-razor --enable-vrpn --enable-intersense
 
 script:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./configure; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./configure --prefix='/usr'; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make && sudo make install; fi
+  - make && sudo make install
 
 after_failure:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ls -alhv /usr/bin/ |grep -E "(clang|gcc|g\+\+)"; fi
-  - if [[ -f config.log ]]; then cat config.log; fi
+  - if [ "$TRAVIS_OS_NAME" = linux ]; then ls -alhv /usr/bin/ | grep -E "(clang|gcc|g\+\+)"; fi
+  - if [ -f config.log ]; then cat config.log; fi
 
 notifications:
   email: false
