--- a/.travis.yml
+++ b/.travis.yml
@@ -111,9 +111,13 @@ matrix:
       os: osx
       osx_image: xcode10.1
 
-before_script:
-  - ci/build-deps.sh
+before_install:
   - if [ "$TRAVIS_OS_NAME" = osx ]; then brew link qt --force; fi
+
+install:
+  - ci/build-deps.sh
+
+before_script:
   - ./autogen.sh
   - ./configure --enable-gui --enable-ip-interface --enable-websocket-interface --enable-ecasound --enable-sofa --enable-polhemus --enable-razor --enable-vrpn --enable-intersense
 
