--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -46,6 +46,8 @@ nobase_dist_extras_DATA = \
 	reproduction_setups/2.0.asd \
 	reproduction_setups/2.1.asd \
 	reproduction_setups/5.1.asd \
+	reproduction_setups/8channels.asd \
+	reproduction_setups/rostock_horizontal.asd \
 	reproduction_setups/rounded_rectangle.asd \
 	reproduction_setups/circle.asd \
 	reproduction_setups/loudspeaker_setup_with_nearly_all_features.asd \
@@ -57,6 +59,7 @@ nobase_dist_extras_DATA = \
 	impulse_responses/hrirs/hrirs_kemar_min_phase_eq.wav \
 	impulse_responses/hrirs/eq_filter_kemar_min_phase.wav \
 	impulse_responses/hrirs/hrirs_fabian_documentation.pdf \
+	impulse_responses/hrirs/README.md \
 	impulse_responses/wfs_prefilters/wfs_prefilter_120_1500_44100.wav \
 	impulse_responses/wfs_prefilters/wfs_prefilter_100_1300_44100.wav \
 	impulse_responses/wfs_prefilters/wfs_prefilter_100_1300_48000.wav \
