--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ git:
 addons:
   apt:
     #update: true
+    sources:
+      # yarn is only available since Ubuntu 19.04 (disco)
+      - sourceline: 'deb https://dl.yarnpkg.com/debian/ stable main'
+        key_url: 'https://dl.yarnpkg.com/debian/pubkey.gpg'
     packages: &default-packages
       - libasio-dev
       - libwebsocketpp-dev
@@ -25,6 +29,8 @@ addons:
       - pkg-config
       - libtool
       - libmysofa-dev
+      # for browser GUI:
+      - yarn
   homebrew:
     update: true
     packages:
