--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
             apt-get install -y \
               automake \
               doxygen \
+              help2man \
               libfftw3-dev \
               libjack-jackd2-dev \
               libsndfile1-dev \
