--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ addons:
       - pkg-config
       - libtool
       - libmysofa-dev
+      # libfmt >= 5 is needed, which is in Ubuntu disco
+      #- libfmt-dev
   homebrew:
     update: true
     packages:
@@ -39,6 +41,7 @@ addons:
       - libxml2
       - qt
       - vrpn
+      - fmt
       # libmysofa needs this:
       - cunit
       # using brew, it's not possible to install needed perl dependencies for
@@ -120,7 +123,7 @@ install:
 before_script:
   - ./autogen.sh
   # NB: browser-gui is tested with CircleCI
-  - ./configure --enable-gui --enable-ip-interface --enable-websocket-interface --enable-ecasound --enable-sofa --enable-polhemus --enable-razor --enable-vrpn --enable-intersense --disable-browser-gui
+  - ./configure --enable-gui --enable-ip-interface --enable-websocket-interface --enable-fudi-interface --enable-ecasound --enable-sofa --enable-polhemus --enable-razor --enable-vrpn --enable-intersense --disable-browser-gui
 
 script:
   - make && sudo make install
