FUDI: documentation patch

--- a/Makefile.am
+++ b/Makefile.am
@@ -78,9 +78,10 @@ dist_noinst_DATA = \
 	flext/hrirs_kemar_min_phase_eq.wav \
 	flext/wfs_prefilter_120_1500_44100.wav \
 	pd/README.md \
+	pd/ssrclient.pd \
 	pd/slaxml.lua \
-	pd/ssrclient-help.pd \
-	pd/ssrclient.pd_lua
+	pd/legacy_ssrclient-help.pd \
+	pd/legacy_ssrclient.pd_lua
 
 dist_noinst_SCRIPTS = flext/startpd.sh
 
