CircleCI: Get yarn from yarnpkg.com
... because the package yarnpkg has been removed from Debian testing (temporarily?).

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
       - run:
           name: Installing apt Packages
           command: |
+            curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+            echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
             apt-get update
             apt-get install -y \
               automake \
@@ -46,7 +48,7 @@ jobs:
               libsndfile1-dev \
               libxml2-dev \
               pkg-config \
-              yarnpkg
+              yarn
 
       - run:
           name: Building HTML Manual
